# holster

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  OPERATING_NOTES.md  README.md  TASK_QUEUE.md  pnpm-lock.yaml
.github/workflows/: ci.yml  pypi.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: day_2_5.rs  day_4_platform.rs
apps/desktop/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
apps/desktop/src/: app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: auth.rs  detectors.rs  env_example.rs  gitignore_helper.rs  lib.rs  main.rs  mcp_preflight.rs  repo_scanner.rs
apps/desktop/src/lib/: api.ts  scanHistory.ts  styles.css
apps/desktop/src/lib/views/: AddKeyDialog.svelte  AuthDialog.svelte  BuildbeltSetupDialog.svelte  ConfirmDelete.svelte  EnvExampleDialog.svelte  ExportRuntimeDialog.svelte  FirstRun.svelte  GitignoreHelperDialog.svelte  HolsterDoctorDialog.svelte  Main.svelte  McpPreflightDialog.svelte  ProjectToolsDialog.svelte  RotateMasterDialog.svelte  ScanProjectDialog.svelte  SecureKeysDialog.svelte  Unlock.svelte
apps/desktop/src/routes/: +layout.ts  +page.svelte
crates/holster-doctor/: Cargo.toml  README.md
crates/holster-doctor/src/: agent_profiles.rs  detectors.rs  env_example.rs  gitignore.rs  lib.rs  scanner.rs
crates/holster-doctor/tests/: integration.rs
crates/holster-vault/: Cargo.toml
crates/holster-vault/examples/: fake_agent_runtime_smoke.rs  fake_aliza_adapter.rs  fake_child_env_wrapper.rs  fake_sidecar_rollback.rs
crates/holster-vault/src/: agent_profile.rs  audit.rs  crypto.rs  db.rs  error.rs  lib.rs  models.rs  session.rs  vault.rs
crates/holster-vault/tests/: no_secret_leak.rs  test_mirror.rs
docs/: questions.md
docs/click-test/: m2-m4-acceptance-2026-05-14.md
docs/framework/: 00_README.md  01_SPEC.md  02_ARCHITECTURE.md  03_THREAT_MODEL.md  04_REPO_STRUCTURE.md  05_MILESTONES.md  06_MILESTONE_1_TASKS.md  07_SECURITY_REVIEW_CHECKLIST.md  08_BRAND.md  09_ALEX_KICKOFF.md
docs/reviews/: backlog.md  m1_security_review.md
mcp/: README.md  pyproject.toml  setup.py
mcp/scripts/: bundle_doctor.py
mcp/src/holster_mcp/: server.py
mcp/src/holster_mcp/free/: __init__.py  check_gitignore.py  rotation_playbook.py  scan_repo.py
mcp/src/holster_mcp/paid/: __init__.py  audit_log.py  license.py  vault_add.py  vault_rotate.py
mcp/src/holster_mcp/util/: cli_shim.py  config.py  doctor_shim.py
mcp/tests/: test_free_tools.py  test_license.py  test_paid_tools.py  test_server_cli.py
registry/: holster-mcp.json
