[build-system]
requires = ["setuptools>=69", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "holster-mcp"
version = "0.1.1"
description = "MCP server for Holster, a local-first secret vault with audit logs and agent tooling."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Nauta AI" }]
keywords = ["mcp", "secrets", "vault", "ai", "agents"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp>=1.27,<1.28",
  "pydantic>=2.7,<3",
  "stripe>=15.1,<15.2",
  "tomli>=2.0,<3; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "build>=1.2,<2",
  "cibuildwheel>=2.23,<3",
]

[project.scripts]
holster-mcp = "holster_mcp.server:main"

[project.urls]
Homepage = "https://nautaai.com/holster"
Repository = "https://github.com/nauta-ai/holster"
Issues = "https://github.com/nauta-ai/holster/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
holster_mcp = ["bin/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
