[package]
name = "holster-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
holster-vault = { path = "../../crates/holster-vault" }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.3"
secrecy = { workspace = true }
uuid = { workspace = true }
plist = "1.7"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
