[package]
name = "holster-vault"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10"
proptest = "1.5"
