[package]
name = "holster-vault"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
# v0.7.0 (CI fix): switched from `bundled-sqlcipher` -> `bundled-sqlcipher-vendored-openssl`
# so Windows + Linux runners don't need system OpenSSL installed. Vendored variant
# compiles OpenSSL from source as part of the build -- same SQLCipher binary, no
# system-level dependency. Trade-off: ~30% longer build, acceptable for the
# portability win (the macOS x86_64 + Windows MSVC builds in release.yml hit
# the SQLCipher-needs-system-openssl failure on first push of v0.7.0).
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10"
proptest = "1.5"
