[package]
name = "holster-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Holster — local-first API key vault (Tauri desktop app)"

[lib]
name = "holster_desktop_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "holster-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
holster-vault = { path = "../../../crates/holster-vault" }
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
# Detector pack: compile-time-anchored regex matching for known secret formats.
regex = "1"
# Repo scanner (M3): directory walking with .gitignore awareness when opted in.
ignore = "0.4"
# Holster Auth (M4): local TOTP generation. The secret remains encrypted in the
# vault; only the current short code crosses IPC when explicitly requested.
hmac = "0.12"
sha1 = "0.10"
url = "2"

[features]
# default Tauri features (devtools in dev builds, custom-protocol in release)
custom-protocol = ["tauri/custom-protocol"]
